added meta tags and robots.txt

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,6 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="title" content="meadarchive">
+    <meta name="description" content="Craft, explore, and share mead recipes at meadarchive.com. Unlock the art of mead-making. Create unique batches with ease">
+    <meta name="keywords" content="mead recipes, homemade mead, mead brewing, mead batches, mead making, mead archive, mead community, meadcraft, mead tips, mead tutorial">
+    <meta name="robots" content="index, follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="revisit-after" content="1 days">
+    <meta name="author" content="Charlie Groves, Eugene Levinson">
+    <meta property="og:title" content="meadarchive">
     <title>MeadArchive</title>
     <link rel="icon" type="image/png" href="https://i.ibb.co/1RcX46r/image.png" />
   </head>
